--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -154,7 +154,7 @@
                                 <Border.ToolTip>
                                     <ToolTip>
                                         <ToolTip.Content>
-                                            <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
+                                            <userControl:ButtonToolTip T1="Cancel" B1="esc"/>
                                         </ToolTip.Content>
                                     </ToolTip>
                                 </Border.ToolTip>
@@ -172,7 +172,7 @@
                                 <Border.ToolTip>
                                     <ToolTip>
                                         <ToolTip.Content>
-                                            <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
+                                            <userControl:ButtonToolTip T1="Add Task" B1="enter"/>
                                         </ToolTip.Content>
                                     </ToolTip>
                                 </Border.ToolTip>
