--- a/UserControls/ButtonToolTip.xaml
+++ b/UserControls/ButtonToolTip.xaml
@@ -5,21 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TemporaTasks.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="40" d:DesignWidth="100">
+             d:DesignHeight="40" d:DesignWidth="100"
+             Loaded="UserControl_Loaded">
 
     <Grid>
 
-        <Border Background="{StaticResource Secondary}" CornerRadius="{Binding CornerRadius, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+        <Border Background="{StaticResource Secondary}" CornerRadius="4"/>
 
-        <Border Padding="{Binding BorderPadding, RelativeSource={RelativeSource AncestorType=UserControl}}">
+        <Border Padding="5">
 
             <StackPanel x:Name="SP" Orientation="Horizontal">
 
-                <Label Content="{Binding ToolTipText, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,7,0"/>
+                <Label Content="{Binding T1, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,7,0"/>
 
-                <Border x:Name="ButtonBackground" Background="{StaticResource DarkerBlue}" BorderBrush="{StaticResource ButtonThickness}" CornerRadius="2" BorderThickness="0,0,0,3">
+                <Border x:Name="Button1Background" Background="{StaticResource DarkerBlue}" BorderBrush="{StaticResource ButtonThickness}" CornerRadius="2" BorderThickness="0,0,0,3">
 
-                    <Label Content="{Binding Button1Text, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,5,0" Margin="2" IsHitTestVisible="False"/>
+                    <Label Content="{Binding B1, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,5,0" Margin="2" IsHitTestVisible="False"/>
+
+                </Border>
+
+                <Label x:Name="T2Label" Content="{Binding T2, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,7,0"/>
+
+                <Border x:Name="Button2Background" Background="{StaticResource DarkerBlue}" BorderBrush="{StaticResource ButtonThickness}" CornerRadius="2" BorderThickness="0,0,0,3">
+
+                    <Label Content="{Binding B2, RelativeSource={RelativeSource AncestorType=UserControl}}" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5,0,5,0" Margin="2" IsHitTestVisible="False"/>
 
                 </Border>
 
