Added logic to display remaining time in TemporaryNotificationMode

--- a/UserControls/MuteModeRightClickMenu.xaml
+++ b/UserControls/MuteModeRightClickMenu.xaml
@@ -17,40 +17,42 @@
                 <Image Source="{StaticResource timerIcon}" Width="12.5" IsHitTestVisible="False"/>
             </Border>
 
-            <Border x:Name="t30m" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
+            <Border x:Name="t30m" MinWidth="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
                 <Border.Background>
                     <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
                 </Border.Background>
-                <Label Content="30m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
+                <Label x:Name="t30mLabel" Content="30m" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
             </Border>
 
-            <Border x:Name="t1h" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
-                <Border.Background>
-                    <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
-                </Border.Background>
-                <Label Content="1h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
-            </Border>
+            <StackPanel x:Name="ButtonPanel" Orientation="Horizontal">
+                <Border x:Name="t1h" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
+                    <Border.Background>
+                        <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
+                    </Border.Background>
+                    <Label Content="1h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
+                </Border>
 
-            <Border x:Name="t6h" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
-                <Border.Background>
-                    <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
-                </Border.Background>
-                <Label Content="6h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
-            </Border>
+                <Border x:Name="t6h" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
+                    <Border.Background>
+                        <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
+                    </Border.Background>
+                    <Label Content="6h" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
+                </Border>
 
-            <Border x:Name="t1d" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
-                <Border.Background>
-                    <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
-                </Border.Background>
-                <Label Content="1d" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
-            </Border>
+                <Border x:Name="t1d" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
+                    <Border.Background>
+                        <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
+                    </Border.Background>
+                    <Label Content="1d" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
+                </Border>
 
-            <Border x:Name="t1w" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
-                <Border.Background>
-                    <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
-                </Border.Background>
-                <Label Content="1w" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
-            </Border>
+                <Border x:Name="t1w" Width="30" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="Border_MouseDown" Cursor="Hand" CornerRadius="5">
+                    <Border.Background>
+                        <SolidColorBrush Color="{Binding Color, Source={StaticResource DarkBlue}}" Opacity="0"/>
+                    </Border.Background>
+                    <Label Content="1w" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="10" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Padding="0" IsHitTestVisible="False"/>
+                </Border>
+            </StackPanel>
 
         </StackPanel>
 
