--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -33,7 +33,7 @@
                         </Grid>
 
                         <Grid Height="40" Margin="0 5 0 0">
-                            <TextBox x:Name="TaskNameTextbox" Style="{StaticResource RoundedTextBox}" TextChanged="TaskNameTextbox_TextChanged" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
+                            <TextBox x:Name="TaskNameTextbox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
                             <Border x:Name="NameBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
                         </Grid>
 
