--- a/Windows/GlobalAddTask.xaml
+++ b/Windows/GlobalAddTask.xaml
@@ -27,7 +27,7 @@
 
                 <Grid Height="35" Margin="0 5 0 0">
                         
-                        <TextBox x:Name="TaskNameTextbox" TextChanged="TaskNameTextbox_TextChanged" Style="{StaticResource RoundedTextBox}" FontSize="12" Padding="8 0 8 0" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
+                        <TextBox x:Name="TaskNameTextbox" Style="{StaticResource RoundedTextBox}" FontSize="12" Padding="8 0 8 0" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
 
                     <Border x:Name="NameBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" CornerRadius="10"/>
 
